--- a/index.html
+++ b/index.html
@@ -33,13 +33,14 @@
                 <div class="offcanvas-body p-0">
                     <ul class="menuLink">
                         <li><a target="_blank" href="http://www.buuzevents.com">How It Works</a></li>
-                        <li><a target="_blank" href="http://www.buuzevents.com">BUUZ In The Press</a></li>
                         <li><a target="_blank" href="http://www.buuzevents.com">Musicians, DJs and Artists</a></li>
                         <li><a target="_blank" href="http://www.buuzevents.com">Venues, Arenas, Stadiums</a></li>
                         <li><a target="_blank" href="http://www.buuzevents.com">Comedy Clubs</a></li>
                         <li><a target="_blank" href="http://www.buuzevents.com">Theaters & Performing Art Centers</a></li>
                         <li><a target="_blank" href="http://www.buuzevents.com">Festivals and Beach Events</a></li>
                         <li><a target="_blank" href="http://www.buuzevents.com">Cities, Municipalities, Parks</a></li>
+                        <li><a target="_blank" href="http://www.buuzevents.com">BUUZ In The Press</a></li>
+                        <li><a target="_blank" href="">Job Opportunities</a></li>
                     </ul>
                 </div>
                 </div>
@@ -47,7 +48,7 @@
             <div class="row pb-5 pt-3">
                 <div class="col-md-6 position-relative text-center text-md-start" data-aos="fade-up">
                     <h1 class="primaryTitle mt-0 mt-md-5 pt-md-5 pt-0">Find Events Fast & Easy</h1>
-                    <p class="bannerDes">Discover the endless variety of events on our app</p>
+                    <p class="bannerDes">Discover the endless variety of events.</p>
                     <img class="bannerIcon" src="assets/image/bannerIcon.svg" alt="banner-icon">
                 </div>
                 <div class="col-md-6" data-aos="fade-up">
@@ -218,7 +219,7 @@
                     <img src="assets/image/icon02.svg" alt="icon02">
                 </div>
                 <a href="https://apps.apple.com/in/app/buuz-find-events-fast-easy/id6478113215" target="_blank"><img src="assets/image/appleLink.svg" alt="app-store" width="340"></a>
-                <a href="#" class="comingSoon" title="Coming Soon"><img src="assets/image/playLink.svg" alt="app-store" width="340"></a>
+                <a href="#" class="comingSoon" title="Coming Soon"><span>Coming Soon</span><img src="assets/image/playLink.svg" alt="app-store" width="340"></a>
             </div>
         </div>
     </section>
@@ -235,6 +236,7 @@
                         <a target="_blank" href="http://www.buuzevents.com">BUUZ In The Press</a>
                         <a target="_blank" href="http://www.buuzevents.com">Terms & Conditions</a>
                         <a target="_blank" href="privacyPolicy.html">Privacy Policy</a>
+                        <a target="_blank" href="#">Job Opportunities</a>
                     </div>
                 </div>
                 <div class="col-md-4 col-lg-3" data-aos="fade-down">
