--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
                 </div>
                 <div class="offcanvas-body p-0">
                     <ul class="menuLink">
-                        <li><a target="_blank" href="http://www.buuzevents.com">How It Works</a></li>
+                        <li><a target="_blank" href="how-it-work.html">How It Works</a></li>
                         <li><a target="_blank" href="http://www.buuzevents.com">Musicians, DJs and Artists</a></li>
                         <li><a target="_blank" href="http://www.buuzevents.com">Venues, Arenas, Stadiums</a></li>
                         <li><a target="_blank" href="http://www.buuzevents.com">Comedy Clubs</a></li>
                         <li><a target="_blank" href="http://www.buuzevents.com">Theaters & Performing Art Centers</a></li>
                         <li><a target="_blank" href="http://www.buuzevents.com">Festivals and Beach Events</a></li>
                         <li><a target="_blank" href="http://www.buuzevents.com">Cities, Municipalities, Parks</a></li>
-                        <li><a target="_blank" href="http://www.buuzevents.com">BUUZ In The Press</a></li>
-                        <li><a target="_blank" href="">Job Opportunities</a></li>
+                        <li><a target="_blank" href="buuzMedia.html">BUUZ In The Media</a></li>
+                        <li><a target="_blank" href="job-opportunities.html">Job Opportunities</a></li>
                     </ul>
                 </div>
                 </div>
@@ -232,11 +232,11 @@
                 </div>
                 <div class="col-md-4 col-lg-2" data-aos="fade-down">
                     <div class="footerLink">
-                        <a target="_blank" href="http://www.buuzevents.com">How It Works</a>
-                        <a target="_blank" href="http://www.buuzevents.com">BUUZ In The Press</a>
+                        <a target="_blank" href="how-it-work.html">How It Works</a>
+                        <a target="_blank" href="buuz-media.html">BUUZ In The Media</a>
                         <a target="_blank" href="http://www.buuzevents.com">Terms & Conditions</a>
-                        <a target="_blank" href="privacyPolicy.html">Privacy Policy</a>
-                        <a target="_blank" href="#">Job Opportunities</a>
+                        <a target="_blank" href="privacy-policy.html">Privacy Policy</a>
+                        <a target="_blank" href="job-opportunities.html">Job Opportunities</a>
                     </div>
                 </div>
                 <div class="col-md-4 col-lg-3" data-aos="fade-down">
