--- a/how-it-work.html
+++ b/how-it-work.html
@@ -53,8 +53,30 @@
     </section>
 
     <section class="sectionPadding">
-        <div class="container py-5 my-5">
-            <h1 class="primaryTitle text-center text-dark">Coming Soon...</h1>
+        <div class="container">
+            <h1 class="primaryTitle text-center text-dark titleMD mb-4 mb-lg-5">How It Works</h1>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="videoCard">
+                        <iframe width="100%" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
+                    </div>
+
+                    <div class="privacyContent">
+                        <p><strong>1. Data and Information Collected &amp; Use</strong><br />
+                            When expressing an interest in obtaining additional information about the Services or registering to use
+                            the Services, BUUZ App requires you to provide the Company with personal contact information, such as
+                            name, phone number and email address (&ldquo;Required Contact Information&rdquo;). Required Contact
+                            Information, Billing Information, and Optional Information about Customers are referred to collectively
+                            as &ldquo;Data About BUUZ Software Inc. Customers&rdquo;, or in the case of Attendees, &ldquo;Data About
+                            BUUZ Software Inc. Attendees&rdquo;. As you navigate the Company&rsquo;s websites, BUUZ Software Inc.
+                            may also collect information through the use of commonly-used information-gathering tools, such as
+                            cookies and web beacons (&ldquo;Web Site Navigational Information&rdquo;). Website Navigational
+                            Information includes standard information from your web browser (such as browser type and browser
+                            language), your Internet Protocol (&ldquo;IP&rdquo;) address, and the actions you take on the
+                            Company&rsquo;s Web sites (such as the Web pages viewed and the links clicked).</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
