--- a/job-opportunities.html
+++ b/job-opportunities.html
@@ -54,7 +54,7 @@
 
     <section class="sectionPadding">
         <div class="container py-5 my-5">
-            <h1 class="primaryTitle text-center text-dark">Coming Soon...</h1>
+            <h1 class="primaryTitle text-center text-dark titleMD">No jobs available yet <br> check back soon.</h1>
         </div>
     </section>
 
