--- a/job-opportunities.html
+++ b/job-opportunities.html
@@ -19,7 +19,7 @@
     <section class="buzzBanner position-relative">
         <div class="container">
             <div class="MenuBar">
-                <a target="_blank" href="http://www.buuzapp.com">
+                <a href="index.html">
                     <img src="assets/image/logo.svg" alt="logo">
                 </a>
 
@@ -35,7 +35,7 @@
                     </div>
                     <div class="offcanvas-body p-0">
                         <ul class="menuLink">
-                            <li><a target="_blank" href="how-it-work.html">How It Works</a></li>
+                            <li><a href="how-it-work.html">How It Works</a></li>
                             <li><a target="_blank" href="http://www.buuzevents.com">Musicians, DJs and Artists</a></li>
                             <li><a target="_blank" href="http://www.buuzevents.com">Venues, Arenas, Stadiums</a></li>
                             <li><a target="_blank" href="http://www.buuzevents.com">Comedy Clubs</a></li>
@@ -44,8 +44,8 @@
                             <li><a target="_blank" href="http://www.buuzevents.com">Festivals and Beach Events</a></li>
                             <li><a target="_blank" href="http://www.buuzevents.com">Cities, Municipalities, Parks</a>
                             </li>
-                            <li><a target="_blank" href="buuz-media.html">BUUZ In The Media</a></li>
-                            <li><a target="_blank" href="job-opportunities.html">Job Opportunities</a></li>
+                            <li><a href="buuz-media.html">BUUZ In The Media</a></li>
+                            <li><a href="job-opportunities.html">Job Opportunities</a></li>
                         </ul>
                     </div>
                 </div>
@@ -62,15 +62,15 @@
         <div class="container">
             <div class="row g-3">
                 <div class="col-md-4 col-lg-2" data-aos="fade-down">
-                    <a target="_blank" href="http://www.buuzapp.com"><img src="assets/image/logo.svg" alt="logo"></a>
+                    <a href="index.html"><img src="assets/image/logo.svg" alt="logo"></a>
                 </div>
                 <div class="col-md-4 col-lg-2" data-aos="fade-down">
                     <div class="footerLink">
-                        <a target="_blank" href="how-it-work.html">How It Works</a>
-                        <a target="_blank" href="buuz-media.html">BUUZ In The Media</a>
+                        <a href="how-it-work.html">How It Works</a>
+                        <a href="buuz-media.html">BUUZ In The Media</a>
                         <a target="_blank" href="http://www.buuzevents.com">Terms & Conditions</a>
-                        <a target="_blank" href="privacy-policy.html">Privacy Policy</a>
-                        <a target="_blank" href="job-opportunities.html">Job Opportunities</a>
+                        <a href="privacy-policy.html">Privacy Policy</a>
+                        <a href="job-opportunities.html">Job Opportunities</a>
                     </div>
                 </div>
                 <div class="col-md-4 col-lg-3" data-aos="fade-down">
