--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section class="buzzBanner position-relative">
         <div class="container">
             <div class="MenuBar">
-                <a target="_blank" href="http://www.buuzapp.com">
+                <a href="index.html">
                     <img src="assets/image/logo.svg" alt="logo">
                 </a>
 
@@ -32,15 +32,15 @@
                 </div>
                 <div class="offcanvas-body p-0">
                     <ul class="menuLink">
-                        <li><a target="_blank" href="how-it-work.html">How It Works</a></li>
+                        <li><a href="how-it-work.html">How It Works</a></li>
                         <li><a target="_blank" href="http://www.buuzevents.com">Musicians, DJs and Artists</a></li>
                         <li><a target="_blank" href="http://www.buuzevents.com">Venues, Arenas, Stadiums</a></li>
                         <li><a target="_blank" href="http://www.buuzevents.com">Comedy Clubs</a></li>
                         <li><a target="_blank" href="http://www.buuzevents.com">Theaters & Performing Art Centers</a></li>
                         <li><a target="_blank" href="http://www.buuzevents.com">Festivals and Beach Events</a></li>
                         <li><a target="_blank" href="http://www.buuzevents.com">Cities, Municipalities, Parks</a></li>
-                        <li><a target="_blank" href="buuz-media.html">BUUZ In The Media</a></li>
-                        <li><a target="_blank" href="job-opportunities.html">Job Opportunities</a></li>
+                        <li><a href="buuz-media.html">BUUZ In The Media</a></li>
+                        <li><a href="job-opportunities.html">Job Opportunities</a></li>
                     </ul>
                 </div>
                 </div>
@@ -228,15 +228,15 @@
         <div class="container">
             <div class="row g-3">
                 <div class="col-md-4 col-lg-2" data-aos="fade-down">
-                    <a target="_blank" href="http://www.buuzapp.com"><img src="assets/image/logo.svg" alt="logo"></a>
+                    <a href="index.html"><img src="assets/image/logo.svg" alt="logo"></a>
                 </div>
                 <div class="col-md-4 col-lg-2" data-aos="fade-down">
                     <div class="footerLink">
-                        <a target="_blank" href="how-it-work.html">How It Works</a>
-                        <a target="_blank" href="buuz-media.html">BUUZ In The Media</a>
+                        <a href="how-it-work.html">How It Works</a>
+                        <a href="buuz-media.html">BUUZ In The Media</a>
                         <a target="_blank" href="http://www.buuzevents.com">Terms & Conditions</a>
-                        <a target="_blank" href="privacy-policy.html">Privacy Policy</a>
-                        <a target="_blank" href="job-opportunities.html">Job Opportunities</a>
+                        <a href="privacy-policy.html">Privacy Policy</a>
+                        <a href="job-opportunities.html">Job Opportunities</a>
                     </div>
                 </div>
                 <div class="col-md-4 col-lg-3" data-aos="fade-down">
@@ -255,20 +255,22 @@
                 </div>
                 <div class="col-md-6 col-lg-2 text-right" data-aos="fade-down">
                     <div class="footerSocial">
-                        <a target="_blank" href="https://www.linkedin.com/company/buuz/"><img src="assets/image/linkdin.svg" alt="linkdin" width="26"></a>
-                        <a target="_blank" href="https://m.facebook.com/buuzsoftware/"><img src="assets/image/Facebook.svg" alt="facebook"></a>
-                        <a target="_blank" href="https://m.youtube.com/@BUUZ_App"><img src="assets/image/YouTube.svg" alt="YouTube"></a>
-                        <a target="_blank" href="https://www.tiktok.com/@buuz_app?_t=ZT-8tR5wqqKORW&_r=1"><img src="assets/image/tiktok.svg" alt="tiktok" width="22"></a>
-                        <a target="_blank" href="https://www.instagram.com/buuz_app?igsh=NTc4MTIwNjQ2YQ=="><img src="assets/image/Instagram.svg" alt="instagram"></a>
+                        <a target="_blank" href="https://www.linkedin.com/company/buuz/"><img
+                                src="assets/image/linkdin.svg" alt="linkdin" width="26"></a>
+                        <a target="_blank" href="https://m.facebook.com/buuzsoftware/"><img
+                                src="assets/image/Facebook.svg" alt="facebook"></a>
+                        <a target="_blank" href="https://m.youtube.com/@BUUZ_App"><img src="assets/image/YouTube.svg"
+                                alt="YouTube"></a>
+                        <a target="_blank" href="https://www.tiktok.com/@buuz_app?_t=ZT-8tR5wqqKORW&_r=1"><img
+                                src="assets/image/tiktok.svg" alt="tiktok" width="22"></a>
+                        <a target="_blank" href="https://www.instagram.com/buuz_app?igsh=NTc4MTIwNjQ2YQ=="><img
+                                src="assets/image/Instagram.svg" alt="instagram"></a>
                     </div>
                 </div>
             </div>
             <div class="copyRight">© 2025 Copyright BUUZ Software Inc. & BUUZ App</div>
         </div>
     </section>
-
-
-
 
     <script src="assets/js/jquery-3.7.1.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
