--- a/textSlider.html
+++ b/textSlider.html
@@ -142,7 +142,7 @@
     <section class="textSliderSection py-3 position-relative" style="background-color: #2EA1A8;">
         <div data-aos="zoom-in" data-aos-delay="800" class="img01 position-absolute"><img src="assets/image/icon03.png" alt="icon03"></div>
         <div data-aos="zoom-in" data-aos-delay="800" class="img02 position-absolute bottom-0 end-0"><img src="assets/image/icon04.png" alt="icon03"></div>
-        <div class="swiper-container">
+        <div class="swiper-container swiperTextSlider">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">Next 2 Week</div>
                 <div class="swiper-slide">Next 4 Week</div>
@@ -296,7 +296,7 @@
                 calculateHeight:true,
 				loop: true,
 				autoplay: {
-				  delay: 3000,
+				  delay: 300000,
 				  disableOnInteraction: false,
 				},
 				on: {
