--- a/textSlider.html
+++ b/textSlider.html
@@ -73,20 +73,24 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-md-5 pt-5 pb-5 pb-md-0 text-center text-md-start position-relative index2"  data-aos="fade-up">
+                <div class="col-md-5 pt-5 pb-4 pb-md-0 text-center text-md-start position-relative index2"  data-aos="fade-up">
                     <h1 class="primaryTitle">Search Events By Category</h1>
                 </div>
                 <div class="col-md-7 smallSlider position-relative" data-aos="fade-up">
-                    <div class="sliderOuter">
-                        <div class="textSlider1">
-                            <h4>Food & Beverage Events</h4>
-                            <h4>Health & Wellness</h4>
-                            <h4>Holiday Events</h4>
-                            <h4>Live Music Events</h4>
-                            <h4>Performing Arts</h4>
-                            <h4>Special Events</h4>
-                            <h4>Sport Events</h4>
-                        </div>
+                    <div class="swiper-container swiperTextSlider">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">Live Music Events</div>
+                            <div class="swiper-slide">Holiday Events</div>
+                            <div class="swiper-slide">Health & Wellness</div>
+                            <div class="swiper-slide">Performing Arts</div>
+                            <div class="swiper-slide">Food & Beverage Events</div>
+                            <div class="swiper-slide">Sport Events</div>
+                            <div class="swiper-slide">Live Music Events</div>
+                            <div class="swiper-slide">Holiday Events</div>
+                            <div class="swiper-slide">Health & Wellness</div>
+                            <div class="swiper-slide">Performing Arts</div>
+                            <div class="swiper-slide">Food & Beverage Events</div>
+                            <div class="swiper-slide">Sport Events</div>
                     </div>
                 </div>
             </div>
