--- a/how-it-work.html
+++ b/how-it-work.html
@@ -57,23 +57,25 @@
             <h1 class="primaryTitle text-center text-dark titleMD mb-4 mb-lg-5">How It Works</h1>
             <div class="row">
                 <div class="col-md-12">
-                    <div class="videoCard">
-                        <iframe width="100%" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
-                    </div>
-
                     <div class="privacyContent">
-                        <p><strong>1. Data and Information Collected &amp; Use</strong><br />
-                            When expressing an interest in obtaining additional information about the Services or registering to use
-                            the Services, BUUZ App requires you to provide the Company with personal contact information, such as
-                            name, phone number and email address (&ldquo;Required Contact Information&rdquo;). Required Contact
-                            Information, Billing Information, and Optional Information about Customers are referred to collectively
-                            as &ldquo;Data About BUUZ Software Inc. Customers&rdquo;, or in the case of Attendees, &ldquo;Data About
-                            BUUZ Software Inc. Attendees&rdquo;. As you navigate the Company&rsquo;s websites, BUUZ Software Inc.
-                            may also collect information through the use of commonly-used information-gathering tools, such as
-                            cookies and web beacons (&ldquo;Web Site Navigational Information&rdquo;). Website Navigational
-                            Information includes standard information from your web browser (such as browser type and browser
-                            language), your Internet Protocol (&ldquo;IP&rdquo;) address, and the actions you take on the
-                            Company&rsquo;s Web sites (such as the Web pages viewed and the links clicked).</p>
+                        <p><strong>Find Events, Venues & More</strong><br />
+                            BUUZ helps you discover live music, sports, nightlife, top tourist attractions, and soon—happy hour specials! Whenever you’re looking for something fun, BUUZ has you covered.</p>
+
+                        <p><strong>Personalized Just for You</strong><br />
+                            The more you use BUUZ, the smarter it gets! The app learns what you love—whether it’s indie rock, football, dog-friendly events, or food festivals. But don’t worry, we never share or sell your data—our pledge to you.</p>
+
+                        <p><strong>Earn Coins & Unlock Perks</strong><br />
+                            You’ll earn coins for swiping, suggesting venues, inviting friends or playing Trivia. More coins mean access to exclusive invitations—think tequila tastings, private concerts, and pop-up dining experiences.</p>
+
+                        <p><strong>Get Smart Event Suggestions</strong><br />
+                            Hate blues music? You won’t get a blues event suggested. Love Halloween parties, flea markets, or soccer? BUUZ will keep you in the loop with the best events near you.</p>
+
+                        <p><strong>Join the Future of Event Discovery</strong><br />
+                            Fast, easy, and completely free. Start exploring today!</p>
+                    </div>
+                    <div class="videoCard mt-4 mt-lg-5 position-relative">
+                        <span>Comming Soon...</span>
+                        <iframe width="100%" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
                     </div>
                 </div>
             </div>
