--- a/buuz-media.html
+++ b/buuz-media.html
@@ -62,7 +62,7 @@
                             <img src="assets/image/media01.jpg" alt="media-01" width="100%" height="auto">
                         </div>
                         <div class="mediaContent">
-                            <h5 class="mediaName">Media Name</h5>
+                            <h5 class="mediaName">Media Name 1</h5>
                             <h3 class="mediaTitle">What is Lorem Ipsum?</h3>
                             <div class="mediaDate d-flex align-items-center flex-wrap">
                                 <span><svg style="enable-background:new 0 0 24 24;" version="1.1" height="20" width="20"
@@ -85,10 +85,13 @@
                                             / fill="#555">
                                     </svg> March 20, 2024</span>
                             </div>
-                            <p class="mediaDes">Lorem Ipsum is simply dummy text of the printing and typesetting
+                            <div class="mediaDesOuter">
+                                <p class="mediaDes">Lorem Ipsum is simply dummy text of the printing and typesetting
                                 industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
                                 when an unknown printer took a galley of type and scrambled it to make a type specimen
-                                book.</p>
+                                book1 </p>
+                                <span class="readMore">Read More</span>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -99,7 +102,7 @@
                             <img src="assets/image/media01.jpg" alt="media-01" width="100%" height="auto">
                         </div>
                         <div class="mediaContent">
-                            <h5 class="mediaName">Media Name</h5>
+                            <h5 class="mediaName">Media Name 2</h5>
                             <h3 class="mediaTitle">What is Lorem Ipsum?</h3>
                             <div class="mediaDate d-flex align-items-center flex-wrap">
                                 <span><svg style="enable-background:new 0 0 24 24;" version="1.1" height="20" width="20"
@@ -122,10 +125,13 @@
                                             / fill="#555">
                                     </svg> March 20, 2024</span>
                             </div>
-                            <p class="mediaDes">Lorem Ipsum is simply dummy text of the printing and typesetting
+                            <div class="mediaDesOuter">
+                                <p class="mediaDes">Lorem Ipsum is simply dummy text of the printing and typesetting
                                 industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
                                 when an unknown printer took a galley of type and scrambled it to make a type specimen
-                                book.</p>
+                                book11 </p>
+                                <span class="readMore">Read More</span>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -136,7 +142,7 @@
                             <img src="assets/image/media01.jpg" alt="media-01" width="100%" height="auto">
                         </div>
                         <div class="mediaContent">
-                            <h5 class="mediaName">Media Name</h5>
+                            <h5 class="mediaName">Media Name 3</h5>
                             <h3 class="mediaTitle">What is Lorem Ipsum?</h3>
                             <div class="mediaDate d-flex align-items-center flex-wrap">
                                 <span><svg style="enable-background:new 0 0 24 24;" version="1.1" height="20" width="20"
@@ -159,10 +165,13 @@
                                             / fill="#555">
                                     </svg> March 20, 2024</span>
                             </div>
-                            <p class="mediaDes">Lorem Ipsum is simply dummy text of the printing and typesetting
+                            <div class="mediaDesOuter">
+                                <p class="mediaDes">Lorem Ipsum is simply dummy text of the printing and typesetting
                                 industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
                                 when an unknown printer took a galley of type and scrambled it to make a type specimen
-                                book.</p>
+                                book111 </p>
+                                <span class="readMore">Read More</span>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -173,7 +182,7 @@
                             <img src="assets/image/media01.jpg" alt="media-01" width="100%" height="auto">
                         </div>
                         <div class="mediaContent">
-                            <h5 class="mediaName">Media Name</h5>
+                            <h5 class="mediaName">Media Name 4</h5>
                             <h3 class="mediaTitle">What is Lorem Ipsum?</h3>
                             <div class="mediaDate d-flex align-items-center flex-wrap">
                                 <span><svg style="enable-background:new 0 0 24 24;" version="1.1" height="20" width="20"
@@ -196,10 +205,13 @@
                                             / fill="#555">
                                     </svg> March 20, 2024</span>
                             </div>
-                            <p class="mediaDes">Lorem Ipsum is simply dummy text of the printing and typesetting
+                            <div class="mediaDesOuter">
+                                <p class="mediaDes">Lorem Ipsum is simply dummy text of the printing and typesetting
                                 industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,
                                 when an unknown printer took a galley of type and scrambled it to make a type specimen
-                                book.</p>
+                                book1111 </p>
+                                <span class="readMore">Read More</span>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -255,6 +267,20 @@
         </div>
     </section>
 
+    <div class="modal fade" id="mediaPopup" tabindex="-1" aria-labelledby="modalTitle" aria-hidden="true">
+        <div class="modal-dialog" style="max-width: 800px;">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" id="modalTitle">Modal Title</h4>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body" id="modalContent">
+                    Modal Content
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="assets/js/jquery-3.7.1.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/aos.js"></script>
@@ -262,6 +288,17 @@
         AOS.init({
             duration: 1200,
         })
+
+        $(document).ready(function(){
+            $(".mediaContent").click(function(){
+                var title = $(this).find(".mediaName").text();
+                var contentHtml = $(this).find(".mediaDes").html();
+
+                $("#modalTitle").text(title);
+                $("#modalContent").html(contentHtml);
+                $("#mediaPopup").modal("show");
+            });
+        });
     </script>
 </body>
 
