--- a/buuz-media.html
+++ b/buuz-media.html
@@ -243,7 +243,7 @@
                 </div>
                 <div class="col-md-6 col-lg-3" data-aos="fade-down">
                     <div class="footerLink">
-                        <a target="_blank" href="http://www.buuzevents.com">Theaters & Performing Art Centers</a>
+                        <a target="_blank" href="media-detail.html">Theaters & Performing Art Centers</a>
                         <a target="_blank" href="http://www.buuzevents.com">Festivals and Beach Events</a>
                         <a target="_blank" href="http://www.buuzevents.com">Cities, Municipalities, Parks</a>
                     </div>
